     [William Rowe]

  *) Enhancement of mod_auth to handle 'Require file-owner' and
     'Require file-group'.  This allows access IFF the authenticated
     username (from the appropriate AuthUserFile database) matches
     the username of the UID that owns the document (and equivalent
     checking for file GID and user's membership in AuthGroupFile).
     See the mod_auth documentation for examples. [Ken Coar]

  *) Addition of the AcceptMutex runtime directive. The accept mutex
     method is now runtime controllable. The suite of available methods
     per platform is defined at compile time (with HAVE_FOO_SERIALIZED_ACCEPT
     noting that the method is available and works, and
     USE_FOO_SERIALIZED_ACCEPT noting that it should be the default
     method in absense of any AcceptMutex line, or via AcceptMutex default)
     and selectable at runtime. The full (current) suite is uslock,
     pthread, sysvsem, fcntl, flock, os2sem, tpfcore and none, but
     not all platforms accept all methods. [Jim Jagielski]

  *) Parallel to a change in Apache-2.0, the manual directory was
     moved out of the DocumentRoot tree to simplify the separation
     of private content&configuration from server's on-line
     documentation. An "Alias /manual/ ..." projects the manual/
     directory (which resides now side-by-side with the icons/
     directory) into the logical DocumentRoot. Note that a request
     to http://server/manual (without the trailing slash) will now
     behave different than before (it used to redirect to
     http://server/manual/ but no longer does).
     [Martin Kraemer]
     
  *) Fixed ap_os_canonical_filename() so that it wouldn't try to
     canonicalize an invalid file name.  Also fixed 
     ap_os_is_path_absolute() so that it wouldn't recognize names
     such as proxy:http://blah as a NetWare volume:pathname.  Both of 
     these fixes were necessary to fix mod_proxy problems on NetWare.
     [Brad Nicholes <BNICHOLES@novell.com>]
