@@ -1,5 +1,5 @@
 APACHE 1.3 STATUS:						-*-text-*-
-  Last modified at [$Date: 2001/09/11 03:11:57 $]
+  Last modified at [$Date: 2001/09/11 03:29:10 $]
 
 Release:
 
@@ -35,8 +35,6 @@ Release:
     2.0  : In alpha development, see httpd-2.0 repository
 
 RELEASE SHOWSTOPPERS:
-
-    mod_auth is now broken on win32, due to the getpwuid changes.
 
     ab is broken on many platforms.  Dirk has offered patch, it does not
     apply cleanly, he has offered to clean this up.
